small typo -- to &mdash;

--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@ $(function()
 		<label>Save : <input type="text" id="filename" value="Song"/>&nbsp;<button type="button" id="savesvg">Save .SVG</button>&nbsp;</label><button type="button" id="saveatj">Save .ATJ</button><br>
 		Read : <input type="file" id="fileinput" /><br>
 		<select id="model">
-			<option value="-1" selected="selected"> -- choose model -- </option>
+			<option value="-1" selected="selected"> &mdash; choose model &mdash; </option>
 			<option value="0">4 columns</option>
 			<option value="1">8 columns</option>
 			<option value="2">Formating example</option>
