remplace http par https a trois endroits

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ text-shadow: 0px 1px 0px #f5f5f5;
 <script type='text/javascript'>
 // ---------- SGV Templates ---------------
 svgbegin = "<?xml version='1.0' encoding='UTF-8' standalone='no'?>\n<svg width='210mm' height='297mm' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 210 297' xmlns:inkscape='http://www.inkscape.org/namespaces/inkscape' xmlns:sodipodi='http://sodipodi.sourceforge.net/DTD/sodipodi-0.dtd'>\n"+
-  "<style type='text/css' > <![CDATA[ @import url(http://fonts.googleapis.com/css?family=[lfp]); ]]></style>";
+  "<style type='text/css' > <![CDATA[ @import url(https://fonts.googleapis.com/css?family=[lfp]); ]]></style>";
 svgtitle = "<text x='[tx]' y='[tly]' id='song_title_[j]' font-size='[tfs]' font-family='Times New Roman, serif' text-anchor='begin' xml:space='preserve' rsid='title' rspos='[tpos]'>[titleline]</text>\n";
 svgchord = "<text x='[cx]' y='[cy]' id='chord_[i]_[j]' font-size='[cfs]' font-family='Times New Roman, serif' font-weight='bold' text-anchor='begin' xml:space='preserve' rsid='chords' rspos='[cpos]'>[chord]</text>\n";
 svgchordrect = "<rect x='[crx]' y='[cry]' width='[cdx]' height='[crdy]' style='stroke:black;stroke-width:0.1;stroke-opacity:1; fill:[color]'/>\n";
@@ -718,7 +718,7 @@ $(function()
 				<span class="helpcommand"><b>%{fill:red;font-size:3}</b>Combined<b>%</b></span><span style="color:red;font-size:3mm">Combined</span><br>
 				<br/>
 				<i>Cells are separated by <b>|</b></i><br>
-				<i>Cell <a href="http://fr.wikipedia.org/wiki/Couleurs_du_Web" target="_blank">color</a> is declared like this : <span style="font-family:monospace">{lightPink}</span> or <span style="font-family:monospace">{#FFB6C1}</span></i>
+				<i>Cell <a href="https://fr.wikipedia.org/wiki/Couleurs_du_Web" target="_blank">color</a> is declared like this : <span style="font-family:monospace">{lightPink}</span> or <span style="font-family:monospace">{#FFB6C1}</span></i>
 				<i>Line equal to <b>-</b> is reduced.</i><br/>
 				<hr>
 				<span class="key">&#x21E5;</span> = 8 spaces, <span class="key">&#x21E7;</span> + <span class="key">&#x21E5;</span> = 16 spaces.</br>
@@ -761,7 +761,7 @@ $(function()
 					Font size : <input type=number id="lfs" min="1" max="40" value="5" class="fontsize" textid="lyrics"><br>
 					Baseline position : <input type=number id="lbl" min="0" max="1" value="0.7" step="0.1"><br>
 					Background transparacy : <input type="range" id="lrt" min="0" max="1" step="0.1" value="0.7"/><br>
-					Font name (from <a href="http://www.google.com/fonts" target="_blank">Google Fonts</a>): <input type="text" id="lfn"/><br>
+					Font name (from <a href="https://www.google.com/fonts" target="_blank">Google Fonts</a>): <input type="text" id="lfn"/><br>
 					examples : <select id="font-examples">
 						<option value="initial"> &mdash; select font &mdash;</option>
 						<option value="" style="color:green">&mdash; reset &mdash;</option>
