add line split using \\

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ model[0] = {"filename":"Alain's guitar tab","tx":3,"ty":10,"tfs":8,"gnx":4,"gny"
 // 8 - columns
 model[1] = {"filename":"Alain's guitar tab","tx":3,"ty":10,"tfs":8,"gnx":8,"gny":15,"gx":1,"gy":17,"gdx":208,"gdy":270,"codx":0.7,"cody":0,"cfs":6,"lrox":1,"lroy":3,"lrdx":205,"lrdy":7,"lfs":5,"lbl":0.7,"lrt":"0.7","lfn":"","title":"*Tom Dooley*                              ~Trad.~ Kingston Trio\n","chords":"E{LightCyan}|E|E|B7|B7|B7|E|F\nB7|B7|B7|E|B7|B7|B7|E\nB7|B7|B7|E|B7|B7|B7|E\nB7|B7|B7|E|B7|B7|B7|E\nB7{Lightgreen}|B7|B7|E|B7|B7|B7|E\nB7|B7|B7|E|B7|B7|B7|E\nB7|B7|B7|E|B7|B7|B7|E\nB7|B7|B7|E|B7|B7|B7|E\nE{LightCyan}|E|E|B7|B7|B7|E|F\nB7|B7|B7|E|B7|B7|B7|E\nB7|B7|B7|E|B7|B7|B7|E\nB7|B7|B7|E|B7|B7|B7|E\nB7{Lightgreen}|B7|B7|E|B7|B7|B7|E\nB7|B7|B7|E|B7|B7|B7|E\nB7|B7|B7|E|B7|B7|B7|E","lyrics":"_Hang_ down your _head_    Tom         Dooley, _Hang_ down your _head_ and cry,\n_Hang_ down your _head_    Tom         Dooley, poor boy, you’re goin’to die\n%{fill:red}(Paroles non formatées à prtir d'ici !)% I met her on themountain,that's where I tookherlife,\nMet her upon the mountain, I stabbed her with my knife\nThis tim e tomorrow reckon where I’ll be,\nIf it was not for Grayson, I'd now be in Ten - nes - see\nThis time tomorrow morning, this soldier boy will be,\nDown in a lonesome valley, hangin’ from some white oak tree\nThey’re gonna try Ann Melton, can’t see no reason why,\nThere’s only one who’s guilty, and now I’m goin’ to die","tpos":65,"j":14,"tly":10,"titleline":"<tspan style='font-weight:bold' xml:space='preserve'>Tom Dooley</tspan>                              <tspan style='font-style:italic' xml:space='preserve'>Trad.</tspan> Kingston Trio","cdx":26,"cdy":18,"lrx":2,"lx":2.21,"cry":287,"cpos":370,"lpos":645,"crdy":18,"cy":276.38,"lry":279.38,"ly":284.28,"lfp":"","i":7,"crx":183,"cx":183.7,"color":"white","chord":"E"};
 // formating example
-model[2] = {"filename":"Alain's guitar tab","tx":3,"ty":10,"tfs":8,"gnx":4,"gny":11,"gx":1,"gy":35,"gdx":208,"gdy":198,"codx":0.7,"cody":0,"cfs":6,"lrox":1,"lroy":3,"lrdx":195,"lrdy":7,"lfs":5,"lbl":0.7,"lrt":"0.7","lfn":"","title":"*Bold Title*                              %{fill:blue}~Italic~ Blue Normal%\n%{font-size:4}Small text%\n%{font-family:monospace}And some text in monospace%\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n~And some text at the end  ... writen in the title section !~\n%{font-family:fantasy}Bla bla bla en fantasy%\n%{font-family:sans-serif}Bla bla bla en sans-serif%\n%{font-family:serif}Bla bla bla en serif%\n%{font-family:cursive}Bla bla bla en cursive%\n%{font-family:monospace}Bla bla bla en monospace%\n","chords":"{LightCyan}%{fill:red}E%|E|E|B7\nB7|B7|B7|E\nE{LightPink}|E|E|B7\nB7|B7|B7|E\nE{GreenYellow}|E|E|B7\nB7|B7|B7|E\n-\nE{Coral}|E|E|B7\nB7|B7|B7|E\nE{Gold}|E|E|B7","lyrics":"-\n_Hang_ down your *_head_*    Tom         Dooley, _Hang_ down your _head_ and cry,\n_Hang_ down your _head_    Tom         Dooley, poor boy, you’re goin’to die\n%{fill:red}(Paroles non formatées à prtir d'ici !)% I met her on themountain,that's where I tookherlife,\nMet her upon the mountain, I stabbed her with my knife\nThis tim e tomorrow reckon where I’ll be,\nIf it was not for Grayson, I'd now be in Ten - nes - see\nThis time tomorrow morning, this soldier boy will be,\nDown in a lonesome valley, hangin’ from some white oak tree\nThey’re gonna try Ann Melton, can’t see no reason why,\n","tpos":475,"j":10,"tly":250,"titleline":"<tspan style='font-family:monospace' xml:space='preserve'>Bla bla bla en monospace</tspan>","cdx":52,"cdy":18,"lrx":2,"lx":2.21,"cry":216.62,"cpos":151,"lpos":589,"crdy":18,"cy":206,"lry":209,"ly":213.9,"lfp":"","i":3,"crx":157,"cx":157.7,"color":"white","chord":"B7"};
+model[2] = {"filename":"Alain's guitar tab","tx":3,"ty":10,"tfs":8,"gnx":4,"gny":11,"gx":1,"gy":35,"gdx":208,"gdy":198,"codx":0.7,"cody":0,"cfs":6,"lrox":1,"lroy":3,"lrdx":195,"lrdy":7,"lfs":5,"lbl":0.7,"lrt":"0.7","lfn":"","title":"*Bold Title*                              %{fill:blue}~Italic~ Blue Normal%\n%{font-size:4}Small text%\n%{font-family:monospace}And some text in monospace%\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n\n~And some text at the end  ... writen in the title section !~\n%{font-family:fantasy}Bla bla bla en fantasy%\n%{font-family:sans-serif}Bla bla bla en sans-serif%\n%{font-family:serif}Bla bla bla en serif%\n%{font-family:cursive}Bla bla bla en cursive%\n%{font-family:monospace}Bla bla bla en monospace%\n","chords":"{LightCyan}%{fill:red}E%|E|E|B7\nB7|B7|B7|E\nE{LightPink}|E|E|B7\nB7|B7|B7|E\nE{GreenYellow}|E|E|B7\nB7|B7|B7|E\n-\nE{Coral}|E|E|B7\nB7|B7|B7|E\nE{Gold}|E|E|B7","lyrics":"-\n_Hang_ down your *_head_*    Tom         Dooley, _Hang_ down your _head_ and cry,\n_Hang_ down your _head_    Tom         Dooley, poor boy, you’re goin’to die\\\\~(this is a second line in italics)~\n%{fill:red}(Paroles non formatées à prtir d'ici !)% I met her on themountain,that's where I tookherlife,\nMet her upon the mountain, I stabbed her with my knife\nThis tim e tomorrow reckon where I’ll be,\nIf it was not for Grayson, I'd now be in Ten - nes - see\nThis time tomorrow morning, this soldier boy will be,\nDown in a lonesome valley, hangin’ from some white oak tree\nThey’re gonna try Ann Melton, can’t see no reason why,\n","tpos":475,"j":10,"tly":250,"titleline":"<tspan style='font-family:monospace' xml:space='preserve'>Bla bla bla en monospace</tspan>","cdx":52,"cdy":18,"lrx":2,"lx":2.21,"cry":216.62,"cpos":151,"lpos":589,"crdy":18,"cy":206,"lry":209,"ly":213.9,"lfp":"","i":3,"crx":157,"cx":157.7,"color":"white","chord":"B7"};
 function LoadModel()
 {
 	nm = parseInt($('#model').val());
@@ -253,7 +253,6 @@ function CreateSVG()
 	param["cry"] = param["gy"];
 
 	lyricslines = param["lyrics"].split("\n");
-	lyricslines_fmt = FormatStr(param["lyrics"]).split("\n");
 	chordlines = param["chords"].split("\n");
 	chordlines_fmt = FormatStr(param["chords"]).split("\n");
 
@@ -277,14 +276,26 @@ function CreateSVG()
 		// ----- lyrics ------
 		param["lfp"] = param["lfn"].trim().replace(/\s*,\s*/g,"|").replace(/\s+/g,"+");
 		if (lyricslines[j] != undefined) {
-			if (lyricslines[j]=="-") // "empty" lyrics line
+			if (lyricslines[j]=="-") { // "empty" lyrics line
 				param["crdy"] = param["crdy"]*0.5;
-			else {
-				param["lyrics"] = lyricslines_fmt[j];
-				svgt += ReplaceParameters(svglyrics,param);
-				svgl += ReplaceParameters(svglyricsrect,param);
+				param["lpos"] += 1; // "-"
+			}	else {
+				// split lyrics line sublines on '\\' and loop over them
+				sublines = lyricslines[j].split(/\\\\/);
+				for (k=0; k < sublines.length; k++) {
+					if (k > 0) {
+						// if we we are between sublines
+						param["lry"] += param["lrdy"];
+						param["ly"] += param["lrdy"];
+						param["crdy"] += param["lrdy"];
+						param["lpos"] += 2; // <br>
+					}
+					param["lyrics"] = FormatStr(sublines[k]);
+					svgt += ReplaceParameters(svglyrics,param);
+					svgl += ReplaceParameters(svglyricsrect,param);
+					param["lpos"] += sublines[k].length; // count characters
+				}
 			}
-			param["lpos"] += lyricslines[j].length;
 		}
 		param["lpos"] += 1;
 
@@ -719,7 +730,7 @@ $(function()
 				<br/>
 				<i>Cells are separated by <b>|</b></i><br>
 				<i>Cell <a href="https://fr.wikipedia.org/wiki/Couleurs_du_Web" target="_blank">color</a> is declared like this : <span style="font-family:monospace">{lightPink}</span> or <span style="font-family:monospace">{#FFB6C1}</span></i>
-				<i>Line equal to <b>-</b> is reduced.</i><br/>
+				<i>Line equal to <b>-</b> is reduced. Split line using <code>\\</code>.</i><br/>
 				<hr>
 				<span class="key">&#x21E5;</span> = 8 spaces, <span class="key">&#x21E7;</span> + <span class="key">&#x21E5;</span> = 16 spaces.</br>
 				<span class="key">&#x21E7;</span> + Mouse
